--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,7 +12,7 @@
 }
 
 .navbar-ul div {
-    margin: 0 4rem;
+    margin: 1rem 4rem;
 }
 
 .navbar-li {
@@ -20,16 +20,35 @@
 }
 
 .navbar-li a,
-button {
+button,
+h2 {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 10px;
     text-decoration: none;
     margin: 8px 10px;
+    font-size: 20px;
+}
+
+.navbar-title {
+    font-size: 30px;
+    padding-top: 8px;
+    padding-bottom: 14px;
 }
 
 .navbar-li button {
     color: black;
     margin: 5px 20px;
+}
+
+.main-content {
+    width: 100%;
+    height: 720px;
+}
+
+#home-image {
+    width: 100%;
+    height: auto;
+    transform: scaleX(-1);
 }
