--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Sen', sans-serif;
+    box-sizing: border-box;
+}
+
 .navbar {
     margin: 0 auto;
     padding: 0;
@@ -8,7 +13,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: black;
+    background-color: #232536;
 }
 
 .navbar-ul div {
@@ -38,14 +43,70 @@ h2 {
 }
 
 .navbar-li button {
-    color: black;
+    width: 179px;
+    height: 56px;
     margin: 5px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+#navbar-button-a {
+    color: #232536;
+}
+
 
 .main-content {
     width: 100%;
-    height: 720px;
+    text-align: center;
 }
+
+.image-main-content {
+    max-width: 100%;
+    height: auto;
+}
+
+.text-main-content {
+    display: block;
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.text-main-content h2 {
+    padding-left: 45%;
+    font-size: 1vw;
+    text-align: left;
+}
+
+.text-main-content h1 {
+    margin-top: 5%;
+    color: white;
+    padding-left: 45%;
+    text-align: left;
+    font-size: 3.5vw;
+}
+
+.text-main-content p {
+    color: white;
+    text-align: left;
+    padding-left: 45%;
+    padding-right: 10%;
+    font-size: 1.5vw;
+}
+
+.text-main-content button {
+    position: absolute;
+    top: 110%;
+    right: 43.25%;
+    width: 10.5vw;
+    transform: translateY(-50%);
+    background-color: #FFD050;
+    color: black;
+}
+
 
 #home-image {
     width: 100%;
