Feito a página de blog com os posts.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -293,3 +293,12 @@ select:focus {
 .footer-submit button:hover {
     background: #EDC14A;
 }
+
+.footer-addres {
+    padding-top: 1vw;
+    width: 100%;
+}
+
+.footer-addres p {
+    color: #FFFFFF;
+}
